# $Id$

2007-04-09	Ivan Y. Khvostishkov

	* core/Base/Timestamp.class.php: toISOString() convertes it according to
	ISO 8601 standard.

	* core/Form/MappedForm.class.php: fixed ability to add more than one
	source for primitive.

	* core/Form/FormUtils.class.php: fixed object2form() for non-prototyped
	objects.

2007-04-09	Konstantin V. Arkhipov

	* main/Base/CompositeLightMetaProperty.class.php: new light property type
	implemented.

	* meta/builders/ValueObjectDaoBuilder.class.php,
	main/DAOs/ValueObjectDAO.class.php: dropped.

2007-04-08	Konstantin V. Arkhipov

	* main/DAOs/ProtoDAO.class.php: unified makeSelf() implemented.

	* main/Base/AbstractProtoClass.class.php: now able to generate Form
	from internal properties list.

	* meta/builders/AutoProtoClassBuilder.class.php: dropped generation of
	makeForm().

	* main/Base/LightMetaProperty.class.php: size and type properties
	added.

2007-04-08	Dmitry E. Demidov

	* main/Flow/RedirectView.class.php,
	main/Flow/RedirectToView.class.php: change visibility of getUrl 
	to public.
	
2007-04-06	Ivan Y. Khvostishkov

	* main/Base/RequestType.class.php: added ability to import data from
	attached vars.

2007-04-04	Konstantin V. Arkhipov

	* meta/: syntax checking now off by default, use --syntax-check to
	enable it.

2007-04-03	Konstantin V. Arkhipov

	* meta/types/PasswordType.class.php: bye.

	* meta/: LazyOneToOne relation dropped, you can use
	'relation="OneToOne" fetch="lazy"' instead.

	* meta/: read-only includes implemented via 'build="false"' option.

	* meta/: --dry-run mode added.

2007-04-02	Konstantin V. Arkhipov

	* meta/internal.xml: new internal classes added - IdentifiableObject,
	NamedObject, IndetifiableTree, NamedTree.

2007-04-01	Konstantin V. Arkhipov

	* meta/: internal classes implementation finished.

	* meta/classes/MetaConfiguration.class.php: spooked class type is
	obsoleted now, do not specify it manually anymore, it will be set for
	spooked patterns automagically.
